--- a/ansible/templates/nginx/glitchbrain.conf
+++ b/ansible/templates/nginx/glitchbrain.conf
@@ -1,9 +1,10 @@
 # vim: set filetype=nginx :
 server {
-    listen                  {{ ansible_host }}:443 ssl http2;
-    listen                  [::]:443 ssl http2;
-    server_name             glitchbra.in;
-    root                    /usr/local/www/glitchbrain/;
+    listen      {{ hostvars[inventory_hostname]['host_ip'] }}:443 ssl;
+    http2       on;
+    listen      [::]:443 ssl http2;
+    server_name glitchbra.in;
+    root        /usr/local/www/glitchbrain/;
 
     include ./general.conf;
     include ./security.conf;
@@ -25,7 +26,7 @@ server {
 
 # HTTP redirect
 server {
-    listen      {{ ansible_host }}:80;
+    listen      {{ hostvars[inventory_hostname]['host_ip'] }}:80;
     listen      [::]:80;
     server_name glitchbra.in;
     include     ./letsencrypt.conf;
