--- a/ansible/templates/transmission-settings.json
+++ b/ansible/templates/transmission-settings.json
@@ -16,7 +16,7 @@
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
     "default-trackers": "",
-    "dht-enabled": true,
+    "dht-enabled": false,
     "download-dir": "/home/transmission/downloads",
     "download-queue-enabled": true,
     "download-queue-size": 5,
@@ -25,7 +25,7 @@
     "idle-seeding-limit-enabled": false,
     "incomplete-dir": "//Downloads",
     "incomplete-dir-enabled": false,
-    "lpd-enabled": true,
+    "lpd-enabled": false,
     "message-level": 4,
     "peer-congestion-algorithm": "",
     "peer-limit-global": 200,
@@ -33,9 +33,9 @@
     "peer-port": 51413,
     "peer-port-random-high": 65535,
     "peer-port-random-low": 49152,
-    "peer-port-random-on-start": false,
+    "peer-port-random-on-start": true,
     "peer-socket-tos": "le",
-    "pex-enabled": true,
+    "pex-enabled": false,
     "pidfile": "/var/run/transmission/daemon.pid",
     "port-forwarding-enabled": true,
     "preallocation": 1,
