--- a/ansible/templates/transmission-settings.json
+++ b/ansible/templates/transmission-settings.json
@@ -10,8 +10,8 @@
     "announce-ip-enabled": false,
     "anti-brute-force-enabled": false,
     "anti-brute-force-threshold": 100,
-    "bind-address-ipv4": "127.0.0.1",
-    "bind-address-ipv6": "::1",
+    "bind-address-ipv4": "0.0.0.0",
+    "bind-address-ipv6": "::",
     "blocklist-enabled": false,
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
@@ -33,7 +33,7 @@
     "peer-port": 51413,
     "peer-port-random-high": 65535,
     "peer-port-random-low": 49152,
-    "peer-port-random-on-start": true,
+    "peer-port-random-on-start": false,
     "peer-socket-tos": "le",
     "pex-enabled": false,
     "pidfile": "/var/run/transmission/daemon.pid",
