--- a/ansible/templates/transmission-settings.json
+++ b/ansible/templates/transmission-settings.json
@@ -45,18 +45,18 @@
     "ratio-limit": 2,
     "ratio-limit-enabled": false,
     "rename-partial-files": false,
-    "rpc-authentication-required": false,
+    "rpc-authentication-required": true,
     "rpc-bind-address": "127.0.0.1",
     "rpc-enabled": true,
     "rpc-host-whitelist": "",
-    "rpc-host-whitelist-enabled": true,
+    "rpc-host-whitelist-enabled": false,
     "rpc-password": "{32b3508f48eba3519948a8d14b2427355475f83eDclCY5VU",
     "rpc-port": 9091,
     "rpc-socket-mode": "0750",
     "rpc-url": "/transmission/",
-    "rpc-username": "",
+    "rpc-username": "hecate",
     "rpc-whitelist": "127.0.0.1,::1",
-    "rpc-whitelist-enabled": true,
+    "rpc-whitelist-enabled": false,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-added-enabled": false,
     "script-torrent-added-filename": "",
